# src/app/authentication/docs/swagger.json
@@ -46,9 +46,9 @@
             "required": [
                 "email",
                 "name",
-                "pancard_number",
+                "pancardNumber",
                 "password",
-                "phone_number"
+                "phoneNumber"
             ],
             "properties": {
                 "email": {
@@ -64,7 +64,7 @@
                     "minLength": 3,
                     "example": "John Doe"
                 },
-                "pancard_number": {
+                "pancardNumber": {
                     "type": "string",
                     "example": "ABCDE1234F"
                 },
@@ -73,7 +73,7 @@
                     "minLength": 8,
                     "example": "password"
                 },
-                "phone_number": {
+                "phoneNumber": {
                     "type": "integer",
                     "example": 1234567890
                 }
